Lots of work, whitelisting now supports a lot more situations